--- a/src/componets/header/header.css
+++ b/src/componets/header/header.css
@@ -31,12 +31,12 @@
   margin-right: 1rem;
 }
 
-.menu li{
+.menu p{
   display: inline-block;
   margin: 0.4rem;
 } 
 
-.menu li a{
+.menu p span{
   display: block;
   padding: 0.5rem;
   font-size: large;
